--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
     </section>
 
     <footer>
-        <p>Sígueme en Instagram: <a href="https://www.instagram.com/_zoebaena?igsh=c3hvejhnd2tmaDMx">@_zoebaena</a></p>
+        <p>Sígueme en Instagram: <a href="https://www.instagram.com/just_noonn/">@just_noonn</a></p>
         <p>&copy; 2025 Venta de Dibujos - Todos los derechos reservados</p>
     </footer>
 </body>
